[tool.poetry]
name = "databricks-sandbox"
version = "0.1.0"
description = ""
authors = ["Javier Matias-Cabrera <javier@javiermatias.com>"]
#packages = [
#    { include = "databricks_sandbox", from = "." }
#]

#    _      ___  _   _  _____  _____  ____
#   | |    |_ _|| \ | ||_   _|| ____||  _ \
#   | |     | | |  \| |  | |  |  _|  | |_) |
#   | |___  | | | |\  |  | |  | |___ |  _ <
#   |_____||___||_| \_|  |_|  |_____||_| \_\
#

[tool.black]
line-length = 100
target-version = ['py310']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/notebooks  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

#     ____  ___   ____   _____      _     _   _     _     _   __   __ ____  ___  ____
#    / ___|/ _ \ |  _ \ | ____|    / \   | \ | |   / \   | |  \ \ / // ___||_ _|/ ___|
#   | |   | | | || | | ||  _|     / _ \  |  \| |  / _ \  | |   \ V / \___ \ | | \___ \
#   | |___| |_| || |_| || |___   / ___ \ | |\  | / ___ \ | |___ | |   ___) || |  ___) |
#    \____|\___/ |____/ |_____| /_/   \_\|_| \_|/_/   \_\|_____||_|  |____/|___||____/
#
[[tool.mypy.overrides]]
module = ["pyodbc.*"]
ignore_missing_imports = true

[tool.flake8]
count = true


#    _   _   _   _   ___   _____     _____   _____   ____    _____   ____
#   | | | | | \ | | |_ _| |_   _|   |_   _| | ____| / ___|  |_   _| / ___|
#   | | | | |  \| |  | |    | |       | |   |  _|   \___ \    | |   \___ \
#   | |_| | | |\  |  | |    | |       | |   | |___   ___) |   | |    ___) |
#    \___/  |_| \_| |___|   |_|       |_|   |_____| |____/    |_|   |____/
#

[tool.pytest.ini_options]
addopts = "-p no:warnings"
markers = [
    "integration",
    "unit",
    "aat"
]

#    ____   _____  ____   _____  _   _  ____   _____  _   _   ____  ___  _____  ____
#   |  _ \ | ____||  _ \ | ____|| \ | ||  _ \ | ____|| \ | | / ___||_ _|| ____|/ ___|
#   | | | ||  _|  | |_) ||  _|  |  \| || | | ||  _|  |  \| || |     | | |  _|  \___ \
#   | |_| || |___ |  __/ | |___ | |\  || |_| || |___ | |\  || |___  | | | |___  ___) |
#   |____/ |_____||_|    |_____||_| \_||____/ |_____||_| \_| \____||___||_____||____/
#

[tool.poetry.dependencies]
python = "~3.10"
wheel = "^0.43.0"
pyspark = "^3.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = ">=1.5.1"
flake8-functions = ">=0.0.8"
flake8-pyproject = "^1.2.3"
black = {extras = ["d"], version = "^23.10.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
